peac_dev/force-app/main/default/objects/Tax_Rule__c/Tax_Rule__c.object-meta.xml
<CustomObject>
    <label>Tax Rule</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Tax Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>