peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The city that the tax rule is applicable to (if any). This is not required and is informational only. If a rule is applicable to a certain city(s) that should be handled in the Rule Conditions associated with this Tax Rule.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>