peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/City_Misc_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Misc_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City Misc Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>