peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/City_Rate_Code_to_Use__c.field-meta.xml
<CustomField>
    <fullName>City_Rate_Code_to_Use__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City Rate Code to Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>