peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/County_Misc_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Misc_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>County Misc Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>