peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>