peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/Rate_Code_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code_to_Use__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Code to Use</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>