peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/Rule_Config__c.field-meta.xml
<CustomField>
    <fullName>Rule_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rule Config</label>
    <referenceTo>TCRE__Rule_Config__c</referenceTo>
    <relationshipLabel>Tax Rules</relationshipLabel>
    <relationshipName>Tax_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>