peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The state that the tax rule is applicable to (if any). This is not required and is informational only. If a rule is applicable to a certain state(s) that should be handled in the Rule Conditions associated with this Tax Rule.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>