peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/Tax_Basis_Field__c.field-meta.xml
<CustomField>
    <fullName>Tax_Basis_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Basis Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>