peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/Tax_Basis_Object__c.field-meta.xml
<CustomField>
    <fullName>Tax_Basis_Object__c</fullName>
    <formula>Rule_Config__r.TCRE__SObject_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Basis Object</label>
    <type>Text</type>
</CustomField>