peac_dev/force-app/main/default/objects/Tax_Rule__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>