peac_dev/force-app/main/default/objects/Tax_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Type__c</columns>
    <columns>Description__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Tax_Basis_Object__c</columns>
    <columns>Tax_Basis_Field__c</columns>
    <columns>Rule_Config__c</columns>
    <columns>Rate_Code_to_Use__c</columns>
    <columns>State_Rate_Code_to_Use__c</columns>
    <columns>County_Rate_Code_to_Use__c</columns>
    <columns>TCounty_Rate_Code_to_Use__c</columns>
    <columns>City_Rate_Code_to_Use__c</columns>
    <columns>TCity_Rate_Code_to_Use__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>