peac_dev/force-app/main/default/objects/Tax_Rule__c/listViews/IL_tax_rules.listView-meta.xml
<ListView>
    <fullName>IL_tax_rules</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Tax_Basis_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Illinois</value>
    </filters>
    <label>IL tax rules</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>